[package]
name = "dcm_archive_find"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.37", features = ["bundled-full"] }
dirs = "6"
lazy_static = "1"
regex = "1"
print_bytes = { version = "2", features = ["os_str_bytes"] }

[[bin]]
name = "dcm_archive_find"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true